JumpScript/tests/baselines/reference/es6ImportNamedImportWithExport.errors.txt
tests/cases/compiler/client.jump(1,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.jump(2,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.jump(3,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.jump(4,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.jump(5,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.jump(6,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.jump(7,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.jump(8,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.jump(9,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.jump(10,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.jump(11,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.jump(12,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.jump(13,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.jump(14,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.jump(15,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.jump(16,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.jump(17,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.jump(18,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.jump(19,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.jump(21,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.jump(25,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.jump(26,1): error TS1191: An import declaration cannot have modifiers.


==== tests/cases/compiler/server.jump (0 errors) ====
    export var a = 10;
    export var x = a;
    export var m = a;
    export var a1 = 10;
    export var x1 = 10;
    export var z1 = 10;
    export var z2 = 10;
    export var aaaa = 10;
    
==== tests/cases/compiler/client.jump (22 errors) ====
    export import { } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export import { a } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var xxxx = a;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export import { a as b } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var xxxx = b;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export import { x, a as y } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var xxxx = x;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export var xxxx = y;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export import { x as z,  } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var xxxx = z;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export import { m,  } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var xxxx = m;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export import { a1, x1 } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var xxxx = a1;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export var xxxx = x1;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export import { a1 as a11, x1 as x11 } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var xxxx = a11;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export var xxxx = x11;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export import { z1 } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var z111 = z1;
    export import { z2 as z3 } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var z2 = z3; // z2 shouldn't give redeclare error
    
    // Non referenced imports
    export import { aaaa } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export import { aaaa as bbbb } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    